# lattice-structure-hs

./: .gitignore  .project  LICENSE  README.md  lattice-structure-hs.cabal  wavelet-hs.cabal
bench/: BenchParam.hs  MainBenchmarkSuite.hs
bench/Signal/: WaveletBench.hs
bench/Signal/Repa/: WaveletBench.hs
bench/Signal/Wavelet/: C1Bench.hs  CBench.hs  Eval1Bench.hs  Eval2Bench.hs  EvalBench.hs  List1Bench.hs  List2Bench.hs  ListBench.hs  Repa1Bench.hs  Repa2Bench.hs  Repa3Bench.hs  Vector1Bench.hs  VectorBench.hs
bench/Signal/Wavelet/Eval/: CommonBench.hs
bench/Signal/Wavelet/List/: CommonBench.hs
bench/Signal/Wavelet/Repa/: LibraryBench.hs
cbits/: dwt.c  dwt.h
csrc/: Makefile  dwt.c  dwt.h  main.c  show.c  show.h
src/Signal/: Utils.hs  Wavelet.hs
src/Signal/Repa/: Wavelet.hs
src/Signal/Wavelet/: C.hs  C1.hs  Eval.hs  Eval1.hs  Eval2.hs  List.hs  List1.hs  List2.hs  Repa1.hs  Repa2.hs  Repa3.hs  Vector.hs  Vector1.hs
src/Signal/Wavelet/C/: dwt.c  dwt.h
src/Signal/Wavelet/Eval/: Common.hs
src/Signal/Wavelet/List/: Common.hs
src/Signal/Wavelet/Repa/: Common.hs
src/Signal/Wavelet/Vector/: Common.hs
tests/: MainTestSuite.hs
tests/Signal/: WaveletTest.hs  WaveletTestSuite.hs
tests/Signal/Repa/: WaveletTest.hs
tests/Signal/Wavelet/: C1Test.hs  CTest.hs  Eval1Test.hs  Eval2Test.hs  EvalTest.hs  List1Test.hs  List2Test.hs  ListTest.hs  ReferenceITest.hs  Repa1Test.hs  Repa2Test.hs  Repa3Test.hs  Vector1Test.hs  VectorTest.hs
tests/Signal/Wavelet/Eval/: CommonTest.hs
tests/Signal/Wavelet/List/: CommonTest.hs
tests/Signal/Wavelet/Repa/: CommonTest.hs
tests/Test/: #Utils.hs#  .#Utils.hs  ArbitraryInstances.hs  Repa.hs  Utils.hs
tests/Test/Data/: Wavelet.hs
tests/Test/Vector/: Storable.hs
