name:               lattice-structure-hs
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Jan Stolarek <jan.stolarek@p.lodz.pl>
maintainer:         jan.stolarek@p.lodz.pl
copyright:          (c) 2012-2014 Jan Stolarek
bug-reports:        jan.stolarek@p.lodz.pl
synopsis:           Parallel orthogonal lattice structure in Haskell
description:        This library is my failed attempt to implement efficient
                    parallel lattice structure in Haskell. See
                    <http:http://lambda.jstolarek.com/2014/05/parallel-haskell-challange-also-how-to-make-your-research-project-fail this blog post>
                    for more information.
stability:          experimental
category:           Math
build-type:         Simple
cabal-version:      >=1.8
tested-with:        GHC>=7.6.3
extra-source-files: README.md

source-repository head
   type:     git
   location: git://bitbucket.com/jstolarek/lattice-structure-hs

Flag sse3
  Description: use SSE3 to compute DWT with C implementation
  Default: True

library
  hs-source-dirs:   src
  exposed-modules:  Signal.Wavelet.C1,
                    Signal.Wavelet.Eval.Common,
                    Signal.Wavelet.Eval1,
                    Signal.Wavelet.Eval2,
                    Signal.Wavelet.List.Common,
                    Signal.Wavelet.List1,
                    Signal.Wavelet.List2,
                    Signal.Wavelet.Repa.Common,
                    Signal.Wavelet.Repa1,
                    Signal.Wavelet.Repa2,
                    Signal.Wavelet.Repa3,
                    Signal.Wavelet.Vector1,
                    Signal.Wavelet.Vector.Common
  build-depends:    base,
                    mtl,
                    parallel,
                    repa >=3.0,
                    vector
  extensions:       BangPatterns
                    EmptyDataDecls
                    FlexibleContexts
                    FlexibleInstances
                    ForeignFunctionInterface
                    MagicHash
                    MultiParamTypeClasses
                    TypeSynonymInstances
                    TypeFamilies
                    TypeOperators
  ghc-options:      -Wall
                    -O2
                    -threaded
                    -fno-liberate-case
                    -fsimpl-tick-factor=1000
                    -funfolding-use-threshold1000
                    -funfolding-keeness-factor1000
                    -fllvm
                    -optlo-O3
  cc-options:       -std=c99 -O3 -Wall
  c-sources:        cbits/dwt.c
  if flag(sse3)
    cc-options: -DUSE_SSE3 -msse3

test-suite wavelet-hs-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src, tests
  main-is:          MainTestSuite.hs
  build-depends:    base,
                    Cabal,
                    HUnit,
                    mtl,
                    parallel,
                    QuickCheck,
                    repa,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2,
                    vector
  extensions:       BangPatterns
                    EmptyDataDecls
                    FlexibleContexts
                    FlexibleInstances
                    ForeignFunctionInterface
                    MagicHash
                    MultiParamTypeClasses
                    TypeSynonymInstances
                    TypeFamilies
                    TypeOperators
                    UndecidableInstances
  ghc-options:      -Wall
                    -threaded
                    -rtsopts
  cc-options:       -std=c99 -Wall
  c-sources:        cbits/dwt.c
  if flag(sse3)
    cc-options: -DUSE_SSE3 -msse3

benchmark wavelet-hs-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          MainBenchmarkSuite.hs
  build-depends:    base,
                    criterion,
                    mtl,
                    random,
                    repa,
                    vector,
                    lattice-structure-hs
  ghc-options:      -Wall
                    -O2
                    -rtsopts
                    -eventlog
                    -threaded
                    -fno-liberate-case
                    -fsimpl-tick-factor=1000
                    -funfolding-use-threshold1000
                    -funfolding-keeness-factor1000
                    -fllvm
                    -optlo-O3
  if flag(sse3)
    cc-options: -DUSE_SSE3 -msse3
