name:               wavelet-hs
version:            0.0.1
license:            GPL-3
license-file:       LICENSE
author:             Jan Stolarek <jan.stolarek@p.lodz.pl>
maintainer:         jan.stolarek@p.lodz.pl
copyright:          (c) 2012 Jan Stolarek
-- bug-reports
-- homepage
synopsis:           Wavelet transform library
description:        Wavelet-hs provides function to calculate wavelet transform
stability:          experimental
category:           Math
build-type:         Simple
cabal-version:      >=1.8
tested-with:        GHC>=7.4
--extra-source-files:  README

-- source-repository head
--   type:     git
--   location: git://github.com/...

library
  hs-source-dirs:   src
  exposed-modules:  Signal.Wavelet.C,
                    Signal.Wavelet.Eval,
                    Signal.Wavelet.List,
                    Signal.Wavelet.Repa1,
                    Signal.Wavelet.Repa2,
                    Signal.Wavelet.Vector
  other-modules:    Signal.Wavelet.List.Common,
                    Signal.Wavelet.Repa.Common,
                    Signal.Wavelet.Vector.Common
  build-depends:    base == 4.5.*,
                    deepseq,
                    mtl,
                    parallel,
                    repa >= 3.0,
                    vector
  ghc-options:      -Wall 
                    -O2 
                    -Odph 
                    -rtsopts
                    -eventlog
                    -threaded 
                    -fno-liberate-case 
                    -funfolding-use-threshold1000 
                    -funfolding-keeness-factor1000 
                    -fllvm
                    -optlo-O3
  cc-options:       -std=c99 -O3 -Wall
  c-sources:        src/Signal/Wavelet/C/dwt.c

test-suite wavelet-hs-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src, tests
  main-is:          MainTestSuite.hs
  ghc-options:      -Wall
  build-depends:    base,
                    deepseq,
                    Cabal,
                    HUnit,
                    mtl,
                    parallel,
                    QuickCheck >= 2.4.2 && < 2.6,
                    repa,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2,
                    vector
  cc-options:       -std=c99 -Wall
  c-sources:        src/Signal/Wavelet/C/dwt.c

benchmark wavelet-hs-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          MainBenchmarkSuite.hs
  build-depends:    base,
                    criterion,
                    mtl,
                    random,
                    repa >= 3.0,
                    repa-algorithms,
                    vector,
                    wavelet-hs
  ghc-options:      -Wall 
                    -O2 
                    -Odph 
                    -rtsopts
                    -eventlog
                    -threaded 
                    -fno-liberate-case 
                    -funfolding-use-threshold1000 
                    -funfolding-keeness-factor1000 
                    -fllvm
                    -optlo-O3
