name:               wavelet-hs
version:            0.0.1
license:            GPL-3
license-file:       LICENSE
author:             Jan Stolarek <jan.stolarek@p.lodz.pl>
maintainer:         jan.stolarek@p.lodz.pl
copyright:          (c) 2012 Jan Stolarek
bug-reports:        jan.stolarek@p.lodz.pl
-- homepage
synopsis:           Wavelet transform library
description:        Wavelet-hs provides function to calculate wavelet transform
stability:          experimental
category:           Math
build-type:         Simple
cabal-version:      >=1.8
tested-with:        GHC>=7.4
--extra-source-files:  README

-- source-repository head
--   type:     git
--   location: git://github.com/...

library
  hs-source-dirs:   src
  exposed-modules:  Signal.Wavelet.C1,
                    Signal.Wavelet.Eval.Common,
                    Signal.Wavelet.Eval1,
                    Signal.Wavelet.Eval2,
                    Signal.Wavelet.List.Common,
                    Signal.Wavelet.List1,
                    Signal.Wavelet.List2,
                    Signal.Wavelet.Repa.Common,
                    Signal.Wavelet.Repa1,
                    Signal.Wavelet.Repa2,
                    Signal.Wavelet.Repa3,
                    Signal.Wavelet.Vector1,
                    Signal.Wavelet.Vector.Common
  build-depends:    base == 4.5.*,
                    mtl,
                    parallel,
                    repa >= 3.0,
                    vector >= 0.9 && < 0.10
  ghc-options:      -Wall 
                    -O2 
                    -Odph 
                    -threaded 
                    -fno-liberate-case 
                    -funfolding-use-threshold1000 
                    -funfolding-keeness-factor1000 
                    -fllvm
                    -optlo-O3
  cc-options:       -std=c99 -O3 -Wall
  c-sources:        src/Signal/Wavelet/C/dwt.c

test-suite wavelet-hs-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src, tests
  main-is:          MainTestSuite.hs
  ghc-options:      -Wall
                    -threaded
                    -rtsopts
  build-depends:    base,
                    Cabal,
                    HUnit,
                    mtl,
                    parallel,
                    QuickCheck >= 2.4.2 && < 2.6,
                    repa,
                    test-framework,
                    test-framework-hunit,
                    test-framework-quickcheck2,
                    vector >= 0.9 && < 0.10
  cc-options:       -std=c99 -Wall
  c-sources:        src/Signal/Wavelet/C/dwt.c

benchmark wavelet-hs-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          MainBenchmarkSuite.hs
  build-depends:    base,
                    criterion,
                    mtl,
                    random,
                    repa >= 3.0,
                    vector >= 0.9 && < 0.10,
                    wavelet-hs
  ghc-options:      -Wall 
                    -O2 
                    -Odph 
                    -rtsopts
                    -eventlog
                    -threaded 
                    -fno-liberate-case 
                    -funfolding-use-threshold1000 
                    -funfolding-keeness-factor1000 
                    -fllvm
                    -optlo-O3
